[gd_scene load_steps=3 format=3 uid="uid://lchfcqd5mk4b"]

[ext_resource type="Script" path="res://scripts/OpenChartDialog.gd" id="1_2ekyj"]
[ext_resource type="Texture2D" uid="uid://hglmysmnb6hn" path="res://assets/folder.png" id="2_2potc"]

[node name="Base" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ekyj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="PathContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 1142.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="PathLabel" type="Label" parent="VBoxContainer/PathContainer"]
offset_top = 6.0
offset_right = 45.0
offset_bottom = 32.0
text = "Path: "

[node name="Path" type="LineEdit" parent="VBoxContainer/PathContainer"]
unique_name_in_owner = true
offset_left = 49.0
offset_right = 1080.0
offset_bottom = 38.0
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="PathButton" type="Button" parent="VBoxContainer/PathContainer"]
custom_minimum_size = Vector2i(50, 0)
offset_left = 1084.0
offset_right = 1142.0
offset_bottom = 38.0
icon = ExtResource("2_2potc")

[node name="DirectoryPrompt" type="FileDialog" parent="VBoxContainer/PathContainer/PathButton"]
unique_name_in_owner = true
title = "Open a Directory"
position = Vector2i(50, 50)
size = Vector2i(1000, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 1
root_subfolder = "Charts"

[node name="InvalidPath" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 0.34902, 0.34902, 1)
offset_top = 42.0
offset_right = 1142.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 20
text = "Please select a valid path!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 42.0
offset_right = 1142.0
offset_bottom = 73.0
alignment = 1

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 514.0
offset_right = 574.0
offset_bottom = 31.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Cancel"

[node name="Confirm" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 578.0
offset_right = 628.0
offset_bottom = 31.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Open"

[connection signal="button_down" from="VBoxContainer/PathContainer/PathButton" to="." method="_on_path_button_button_down"]
[connection signal="dir_selected" from="VBoxContainer/PathContainer/PathButton/DirectoryPrompt" to="." method="_on_directory_prompt_dir_selected"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Confirm" to="." method="_on_confirm_button_down"]
